// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Anchor/demo/affix.md correctly 1`] = `
<div
  class=""
  style="position:absolute;right:-170px;top:50%;z-index:1"
>
  <div
    class=""
  >
    <div
      class="arco-anchor"
    >
      <div
        class="arco-anchor-list"
      >
        <div
          class="arco-anchor-link"
        >
          <a
            class="arco-anchor-link-title"
            data-href="#Basic"
            href="#Basic"
            title="Basic"
          >
            Basic
          </a>
        </div>
        <div
          class="arco-anchor-link"
        >
          <a
            class="arco-anchor-link-title"
            data-href="#Static"
            href="#Static"
            title="Static"
          >
            Static
          </a>
        </div>
        <div
          class="arco-anchor-link"
        >
          <a
            class="arco-anchor-link-title"
            data-href="#Lineless-mode"
            href="#Lineless-mode"
            title="Lineless mode"
          >
            Lineless mode
          </a>
        </div>
        <div
          class="arco-anchor-link"
        >
          <a
            class="arco-anchor-link-title"
            data-href="#Affix"
            href="#Affix"
            title="Affix"
          >
            Affix
          </a>
        </div>
        <div
          class="arco-anchor-link"
        >
          <a
            class="arco-anchor-link-title"
            data-href="#Scroll-boundary"
            href="#Scroll-boundary"
            title="Scroll boundary"
          >
            Scroll boundary
          </a>
        </div>
        <div
          class="arco-anchor-link"
        >
          <a
            class="arco-anchor-link-title"
            data-href="#Hash-mode"
            href="#Hash-mode"
            title="Hash mode"
          >
            Hash mode
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Anchor/demo/basic.md correctly 1`] = `
<div
  class=""
>
  <div
    class=""
  >
    <div
      class="arco-anchor"
      style="background-color:var(--color-bg-2)"
    >
      <div
        class="arco-anchor-list"
      >
        <div
          class="arco-anchor-link"
        >
          <a
            class="arco-anchor-link-title"
            data-href="#Basic"
            href="#Basic"
            title="Basic"
          >
            Basic
          </a>
          <div
            class="arco-anchor-link"
          >
            <a
              class="arco-anchor-link-title"
              data-href="#Static"
              href="#Static"
              title="Static"
            >
              Static
            </a>
            <div
              class="arco-anchor-link"
            >
              <a
                class="arco-anchor-link-title"
                data-href="#Lineless-mode"
                href="#Lineless-mode"
                title="Lineless mode"
              >
                Lineless mode
              </a>
            </div>
            <div
              class="arco-anchor-link"
            >
              <a
                class="arco-anchor-link-title"
                data-href="#Affix"
                href="#Affix"
                title="Affix"
              >
                Affix
              </a>
            </div>
          </div>
        </div>
        <div
          class="arco-anchor-link"
        >
          <a
            class="arco-anchor-link-title"
            data-href="#Scroll-boundary"
            href="#Scroll-boundary"
            title="Scroll boundary"
          >
            Scroll boundary
          </a>
        </div>
        <div
          class="arco-anchor-link"
        >
          <a
            class="arco-anchor-link-title"
            data-href="#Hash-mode"
            href="#Hash-mode"
            title="Hash mode"
          >
            Hash mode
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Anchor/demo/boundary.md correctly 1`] = `
<div
  class="arco-anchor"
>
  <div
    class="arco-anchor-list"
  >
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Basic"
        href="#Basic"
        title="Basic"
      >
        Basic
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Static"
        href="#Static"
        title="Static"
      >
        Static
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Lineless-mode"
        href="#Lineless-mode"
        title="Lineless mode"
      >
        Lineless mode
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Affix"
        href="#Affix"
        title="Affix"
      >
        Affix
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Scroll-boundary"
        href="#Scroll-boundary"
        title="Scroll boundary"
      >
        Scroll boundary
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Hash-mode"
        href="#Hash-mode"
        title="Hash mode"
      >
        Hash mode
      </a>
    </div>
  </div>
</div>
`;

exports[`renders Anchor/demo/hash.md correctly 1`] = `
<div
  class="arco-anchor"
>
  <div
    class="arco-anchor-list"
  >
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Basic"
        href="#Basic"
        title="Basic"
      >
        Basic
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Static"
        href="#Static"
        title="Static"
      >
        Static
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Lineless-mode"
        href="#Lineless-mode"
        title="Lineless mode"
      >
        Lineless mode
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Affix"
        href="#Affix"
        title="Affix"
      >
        Affix
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Scroll-boundary"
        href="#Scroll-boundary"
        title="Scroll boundary"
      >
        Scroll boundary
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Hash-mode"
        href="#Hash-mode"
        title="Hash mode"
      >
        Hash mode
      </a>
    </div>
  </div>
</div>
`;

exports[`renders Anchor/demo/horizontal.md correctly 1`] = `
<div>
  <div
    class="arco-typography"
  >
    Default
  </div>
  <div
    class="arco-anchor arco-anchor-horizontal"
  >
    <div
      class="arco-anchor-list"
    >
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Basic"
          href="#Basic"
          title="Basic"
        >
          Basic
        </a>
      </div>
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Static"
          href="#Static"
          title="Static"
        >
          Static
        </a>
      </div>
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Lineless-mode"
          href="#Lineless-mode"
          title="Lineless mode"
        >
          Lineless mode
        </a>
      </div>
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Affix"
          href="#Affix"
          title="Affix"
        >
          Affix
        </a>
      </div>
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Scroll-boundary"
          href="#Scroll-boundary"
          title="Scroll boundary"
        >
          Scroll boundary
        </a>
      </div>
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Hash-mode"
          href="#Hash-mode"
          title="Hash mode"
        >
          Hash mode
        </a>
      </div>
    </div>
  </div>
  <div
    class="arco-typography"
    style="margin-top:32px"
  >
    Lineless mode
  </div>
  <div
    class="arco-anchor arco-anchor-lineless arco-anchor-horizontal"
  >
    <div
      class="arco-anchor-list"
    >
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Basic"
          href="#Basic"
          title="Basic"
        >
          Basic
        </a>
      </div>
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Static"
          href="#Static"
          title="Static"
        >
          Static
        </a>
      </div>
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Lineless-mode"
          href="#Lineless-mode"
          title="Lineless mode"
        >
          Lineless mode
        </a>
      </div>
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Affix"
          href="#Affix"
          title="Affix"
        >
          Affix
        </a>
      </div>
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Scroll-boundary"
          href="#Scroll-boundary"
          title="Scroll boundary"
        >
          Scroll boundary
        </a>
      </div>
      <div
        class="arco-anchor-link"
      >
        <a
          class="arco-anchor-link-title"
          data-href="#Hash-mode"
          href="#Hash-mode"
          title="Hash mode"
        >
          Hash mode
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders Anchor/demo/lineless.md correctly 1`] = `
<div
  class="arco-anchor arco-anchor-lineless"
>
  <div
    class="arco-anchor-list"
  >
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Basic"
        href="#Basic"
        title="Basic"
      >
        Basic
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Static"
        href="#Static"
        title="Static"
      >
        Static
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Lineless-mode"
        href="#Lineless-mode"
        title="Lineless mode"
      >
        Lineless mode
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Affix"
        href="#Affix"
        title="Affix"
      >
        Affix
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Scroll-boundary"
        href="#Scroll-boundary"
        title="Scroll boundary"
      >
        Scroll boundary
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Hash-mode"
        href="#Hash-mode"
        title="Hash mode"
      >
        Hash mode
      </a>
    </div>
  </div>
</div>
`;

exports[`renders Anchor/demo/static.md correctly 1`] = `
<div
  class="arco-anchor"
>
  <div
    class="arco-anchor-list"
  >
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Basic"
        href="#Basic"
        title="Basic"
      >
        Basic
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Static"
        href="#Static"
        title="Static"
      >
        Static
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Lineless-mode"
        href="#Lineless-mode"
        title="Lineless mode"
      >
        Lineless mode
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Affix"
        href="#Affix"
        title="Affix"
      >
        Affix
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Scroll-boundary"
        href="#Scroll-boundary"
        title="Scroll boundary"
      >
        Scroll boundary
      </a>
    </div>
    <div
      class="arco-anchor-link"
    >
      <a
        class="arco-anchor-link-title"
        data-href="#Hash-mode"
        href="#Hash-mode"
        title="Hash mode"
      >
        Hash mode
      </a>
    </div>
  </div>
</div>
`;
